# immuno_cell_analysis

./: .gitignore  MANIFEST.in  pyproject.toml  readme.md
src/immuno_cell_analysis/Part0/: create_flim_mosaics.py  create_mask_mosaics.py
src/immuno_cell_analysis/Part1/: README.md  classify_structures_gmm_phasor.py  compute_phasor_data.py  extract_structure_features_to_csv.py  mask_area_tau_phase.py  mask_filter_area.py  phasor_plot.py
src/immuno_cell_analysis/Part1_calculate_phasor/: README.md  mask_flim_parameters.py  phasor_plots.py  plot_final_mask.py  preflight_check.py  run_all.py
src/immuno_cell_analysis/Part2/: batch_autocalibrate_uncalibrated_flim_by_elastin.py  batch_make_elastin_masks.py  elastin_correction_green_only.py  filter_column.py  merge_visit4_csvs_reindex_ids.py  plot_phasor_autocal_per_visit.py  plot_phasor_from_autocalibrated_csvs.py  umap_clustering_analysis.py
src/immuno_cell_analysis/Part2_phasor_clustering/: README.md  phasor_clustering.py
src/immuno_cell_analysis/Part3_elastin_correction/: README.md  corrected_phasor_plot.py  elastin_phase_mod_correction.py  plot_elastin_centroids_only.py
src/immuno_cell_analysis/old scripts/Part1_calculate_phasor/: calculate_phasor.py  mask_analysis.py  phasor_plots.py
src/immuno_cell_analysis/old scripts/Part2_phasor_clustering/: morphology_hist.py  morphology_plot_diameter.py  morphology_stats_cells.py  phasor_clustering.py
src/immuno_cell_analysis/old scripts/Part3_elastin_correction/: make_global_elastin_phase_mod_reference.py  run_all.py
src/immuno_cell_analysis/utils/: mosaic_utils.py
(+2 files in other folders)
